Fix: Move cart button to bottom-left on mobile

--- a/style.css
+++ b/style.css
@@ -1342,7 +1342,7 @@ button {
   .cart-btn {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     z-index: 1001;
     width: 55px;
     height: 55px;
